syntax = "proto3";
package Clientserverone;
option go_package = "grpc/proto";

message AskForTimeMessage {
    int64 clientId = 1;
}

message TimeMessage {
    string serverName = 1;
    string time = 2;
}

service TimeAsk {
    rpc AskForTime(AskForTimeMessage) returns (TimeMessage);
  }



//go mod init Clientserverone (Hvad mappen hedder) OBS this have to be exactly the same as the go_package name on top of this document
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/proto.proto
//go mod tidy